<resources>
    <string name="app_name">To Do List</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="create">Create</string>
    <string name="task">Task</string>
</resources>