<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="622dp"
            android:text="@string/title"
            android:textColor="@android:color/darker_gray"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="543dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description"
            android:textColor="@android:color/darker_gray"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btCreate"
            android:layout_width="339dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="209dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="26dp"
            android:text="@string/create"
            android:textSize="18sp" />

    </RelativeLayout>
</LinearLayout>