<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|right"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <EditText
            android:id="@+id/ptTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/task"
            android:textSize="26sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@+id/btDelete"
                android:layout_toLeftOf="@+id/btDelete"
                android:text="@string/edit" />
        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="335dp"
            android:layout_marginLeft="335dp"
            android:layout_marginTop="567dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/add_fab"
            android:tint="#FFFFFF"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="auto" />

    </RelativeLayout>

</LinearLayout>